# libri

./: .dockerignore  .gitignore  Cargo.toml  compose.yml  diesel.toml
.github/workflows/: ci.yml
backend/: Cargo.toml  app.py  pyproject.toml
backend/books/: serializers.py  views.py
backend/libri/: settings.py  urls.py
backend/metadata/: views.py
backend/metadata/providers/: base.py  goodreads.py
backend/shiori/: settings.py  urls.py
backend/src/config/: state.rs
backend/src/db/: client.rs  mod.rs
core/: Cargo.toml
core/src/: app.rs  db.rs  lib.rs
crates/shiori_api_types/: Cargo.toml
crates/shiori_api_types/src/: lib.rs
crates/shiori_core/: Cargo.toml
crates/shiori_core/src/: app.rs  db.rs  lib.rs
crates/shiori_core/src/metadata/: goodreads.rs  mod.rs  provider.rs
crates/shiori_database/: Cargo.toml  README.md
crates/shiori_database/src/: schema.patch  schema.rs  token.rs
crates/shiori_database/src/models/: api_token.rs  library.rs  media.rs  media_metadata.rs  mod.rs  reading_progress.rs  refresh_token.rs  user.rs
crates/shiori_filesystem/: Cargo.toml
crates/shiori_filesystem/src/: common.rs  lib.rs
crates/shiori_filesystem/src/image/: webp.rs
crates/shiori_filesystem/src/image/cover/: mod.rs
crates/shiori_filesystem/src/media/: epub.rs
crates/shiori_jwt/: Cargo.toml
crates/shiori_jwt/src/: lib.rs
crates/shiori_metadata/: Cargo.toml
crates/shiori_metadata/src/: errors.rs  goodreads.rs  lib.rs  provider.rs
crates/shiori_metadata/src/goodreads/: book.rs  provider.rs  search.rs
crates/shiori_test/: Cargo.toml
crates/shiori_test/src/: lib.rs  mock_users.rs  test_app.rs  test_db.rs  util.rs
frontend/: README.md  package.json  svelte.config.js
frontend/src/lib/components/ui/: button.svelte
frontend/src/routes/: +page.svelte  layout.css
frontend/src/routes/books/: +page.svelte  +page.ts
frontend/src/routes/books/[id]/: +page.svelte  +page.ts
migrations/2026-03-20-164034-0000_create_media/: up.sql
migrations/2026-03-22-034910-0000_create_metadata/: down.sql  up.sql
migrations/2026-03-25-183332-0000_media_thumbnail/: down.sql  up.sql
migrations/2026-04-12-222651-0000_api_keys/: up.sql
migrations/2026-04-13-041052-0000_alter_api_key_table_name/: down.sql  up.sql
migrations/2026-04-15-032045-0000_user_koreader_pass/: down.sql  up.sql
server/: Cargo.toml
server/src/: errors.rs  main.rs  schema.rs
server/src/config/: state.rs
server/src/models/: media.rs
server/src/routes/: mod.rs  openapi.rs
server/src/routes/api/: mod.rs
server/src/routes/api/v1/: media.rs  mod.rs
src/: auth.rs  errors.rs  lib.rs  main.rs
src/middleware/: auth.rs
src/routes/: openapi.rs
src/routes/api/: mod.rs
src/routes/api/v1/: auth.rs  filesystem.rs  library.rs  media.rs  metadata.rs  mod.rs  tokens.rs
src/routes/koreader/: sync.rs
svelte/: vite.config.ts
tests/: openapi.rs
tests/middleware/: auth.rs
tests/middleware/snapshots/: integration__middleware__auth__authorized_token-2.snap
tests/routes/: mod.rs
tests/routes/auth/: login.rs  logout.rs  mod.rs  refresh_token.rs  register.rs
tests/routes/auth/snapshots/: integration__routes__auth__login__login-2.snap  integration__routes__auth__login__username_case_sensitivity-2.snap  integration__routes__auth__me__me-2.snap  integration__routes__auth__refresh_token__access_token_works_after_refresh-3.snap  integration__routes__auth__register__register-2.snap
tests/routes/media/: delete.rs  get.rs
tests/routes/media/snapshots/: integration__routes__media__get__returns_media_by_id-2.snap
tests/routes/tokens/: get.rs  mod.rs
tests/routes/tokens/snapshots/: integration__routes__tokens__get__get-2.snap  integration__routes__tokens__post__post-2.snap
tests/snapshots/: integration__openapi__open_api_snapshot.snap  openapi__open_api_snapshot.snap
web/: eslint.config.js  package.json  svelte.config.js
web/src/: app.d.ts
web/src/lib/components/: delete-dialog.svelte  dialog.svelte  library-header.svelte  media-card.svelte  metadata-dialog.svelte
web/src/lib/components/folder-picker/: folder-picker.svelte  folder-row.svelte
web/src/lib/components/metadata/: metadata-dialog.svelte  search-card.svelte
web/src/lib/components/sidebar/: logout.svelte  sidebar.svelte
web/src/lib/components/tokens/: columns.ts  create-dialog.svelte  data-table-actions.svelte  data-table.svelte  date-picker.svelte
web/src/lib/components/ui/button/: button.svelte
web/src/lib/components/ui/calendar/: calendar-next-button.svelte  calendar-prev-button.svelte
web/src/lib/components/ui/sheet/: sheet-content.svelte
web/src/lib/components/ui/sidebar/: sidebar-trigger.svelte
web/src/lib/components/upload/: dropzone.svelte  files-list.svelte  upload-dialog.svelte
web/src/routes/: +layout.svelte  +layout.ts  layout.css
web/src/routes/(app)/: +layout.ts  +page.svelte
web/src/routes/(app)/libraries/create/: +page.svelte
web/src/routes/(app)/media/[media_id]/: +page.svelte  +page.ts
web/src/routes/(app)/settings/: +page.svelte
web/src/routes/(app)/settings/tokens/: +page.svelte  +page.ts
web/src/routes/auth/: +page.svelte  +page.ts  schema.ts
web/src/routes/libraries/create/: +page.svelte  +page.ts  schema.ts
web/src/routes/media/[media_id]/: +page.svelte
(+4 files in other folders)
