[workspace]
resolver = "3"
members = ["core","server"]

[workspace.dependencies]
axum = "0.8.8"
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
diesel = { version = "2.3.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.7.4", features = ["sqlite", "deadpool"] }
dotenvy = "0.15.7"
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
utoipa = "5"
utoipa-axum = "0.2"
utoipa-redoc = { version = "6", features = ["axum"] }
