[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
diesel = { version = "2.3.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
