[package]
name = "shiori_database"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["serde"] }
diesel = { version = "2.3.7", features = ["chrono", "postgres"] }
diesel-async = { version = "0.7.4", features = ["postgres", "deadpool"] }
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "5", features = ["chrono"] }
