[package]
name = "shiori_test"
edition = "2024"

[dependencies]
diesel = { version = "2.3.7", features = ["chrono", "postgres"] }
diesel-async = { version = "0.7.4", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
rand = "0.10.0"
tracing = "0.1"
url = "2.5.8"
